--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_EMAILJS_SERVICE_ID = 
-NEXT_PUBLIC_EMAILJS_TEMPLATE_ID = 
-NEXT_PUBLIC_EMAILJS_PUBLIC_KEY = 
+NEXT_PUBLIC_EMAILJS_SERVICE_ID = service_x6aqsxh
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID = template_6aq4byh
+NEXT_PUBLIC_EMAILJS_PUBLIC_KEY = "H3cftsrJRevbG4P2l"
 NEXT_PUBLIC_GTM = 
 NEXT_PUBLIC_APP_URL = "http://127.0.0.1:3000"
 NEXT_PUBLIC_RECAPTCHA_SECRET_KEY = 
